# lz4

./: .gitignore  CMakeLists.txt
tests/: CMakeLists.txt  test_cpp_api.cpp
